# cal2tex

./: .gitignore  CMakeLists.txt  README.md
include/: cal2receipt.hpp  cal2tex.hh  cal_events.hh  file_manip.hh  psyche.hh  utils.hh
src/: cal2receipt.cpp  main.cc  main.cc.bak  main.cpp  utils.cc
